--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "description": "A minimum structure for using node.js,es6 and express",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": " node src/app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dotnetjalps/minimum-nodejs-es6-express.git"
   },
-  "keywords": [
-    "es6",
-    "nodejs",
-    "express"
-  ],
+  "keywords": ["es6", "nodejs", "express"],
   "author": "Jalpesh Vadgama",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dotnetjalps/minimum-nodejs-es6-express/issues"
   },
-  "homepage": "https://github.com/dotnetjalps/minimum-nodejs-es6-express#readme"
+  "homepage":
+    "https://github.com/dotnetjalps/minimum-nodejs-es6-express#readme",
+  "dependencies": {
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3"
+  }
 }
